force-app/main/default/objects/CreditMemo__c/CreditMemo__c.object-meta.xml
<CustomObject>
    <description>Gestion des avoirs basée sur la modélisation des avoirs du modules Salesforce Billing</description>
    <label>Avoir</label>
    <nameField>
        <displayFormat>AVR/{YYYY}/{0000000}</displayFormat>
        <label>Numéro de l’avoir</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avoirs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>