force-app/main/default/objects/CreditMemo__c/fields/afterSalesService__c.field-meta.xml
<CustomField>
    <fullName>afterSalesService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dossier SAV</description>
    <label>Dossier SAV</label>
    <referenceTo>AfterSalesService__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoirs</relationshipName>
    <type>Lookup</type>
</CustomField>