force-app/main/default/objects/CreditMemo__c/fields/autoComputedAmount__c.field-meta.xml
<CustomField>
    <fullName>autoComputedAmount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>[#] Montant auto calculé</label>
    <type>Checkbox</type>
</CustomField>