force-app/main/default/objects/CreditMemo__c/fields/billingCity__c.field-meta.xml
<CustomField>
    <fullName>billingCity__c</fullName>
    <label>Ville de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>