force-app/main/default/objects/CreditMemo__c/fields/billingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>billingPostalCode__c</fullName>
    <label>Code postal de facturation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>