force-app/main/default/objects/CreditMemo__c/fields/billingState__c.field-meta.xml
<CustomField>
    <fullName>billingState__c</fullName>
    <label>Région/département de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>