force-app/main/default/objects/CreditMemo__c/fields/cancellationReason__c.field-meta.xml
<CustomField>
    <fullName>cancellationReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motif d&apos;annulation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerCancellationReason</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>CreditMemosCancellationReason</relationshipName>
    <type>Lookup</type>
</CustomField>