force-app/main/default/objects/CreditMemo__c/fields/creditMemoDate__c.field-meta.xml
<CustomField>
    <fullName>creditMemoDate__c</fullName>
    <label>Date de l&apos;avoir</label>
    <type>Date</type>
</CustomField>