force-app/main/default/objects/CreditMemo__c/fields/creditMemoLinesCount__c.field-meta.xml
<CustomField>
    <fullName>creditMemoLinesCount__c</fullName>
    <label>[#] Nombre de lignes</label>
    <summaryForeignKey>CreditMemoLine__c.creditMemo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>