force-app/main/default/objects/CreditMemo__c/fields/creditMemoReference__c.field-meta.xml
<CustomField>
    <fullName>creditMemoReference__c</fullName>
    <externalId>true</externalId>
    <label>Référence de l’avoir</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>