force-app/main/default/objects/CreditMemo__c/fields/euroAMount__c.field-meta.xml
<CustomField>
    <fullName>euroAMount__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(creditMemoDate__c)), creditMemoDate__c &lt; DATE(2002,01,01),NOT(ISBLANK(amount__c))),
amount__c / 6.55957,
amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TTC (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>