force-app/main/default/objects/CreditMemo__c/fields/headOfficeName__c.field-meta.xml
<CustomField>
    <fullName>headOfficeName__c</fullName>
    <defaultValue>&quot;K PAR K&quot;</defaultValue>
    <label>Nom du siège social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>