force-app/main/default/objects/CreditMemo__c/fields/headOfficePhone__c.field-meta.xml
<CustomField>
    <fullName>headOfficePhone__c</fullName>
    <label>Téléphone du siège social</label>
    <type>Phone</type>
</CustomField>