force-app/main/default/objects/CreditMemo__c/fields/headOfficeSIREN__c.field-meta.xml
<CustomField>
    <fullName>headOfficeSIREN__c</fullName>
    <defaultValue>401375316</defaultValue>
    <label>N° SIREN du siège social</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>