force-app/main/default/objects/CreditMemo__c/fields/headOfficeState__c.field-meta.xml
<CustomField>
    <fullName>headOfficeState__c</fullName>
    <label>Région/département du siège social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>