force-app/main/default/objects/CreditMemo__c/fields/isCreditMemoLocked__c.field-meta.xml
<CustomField>
    <fullName>isCreditMemoLocked__c</fullName>
    <description>Interdire toute suppression de facture dès qu&apos;un numéro fiscal a été apposé sur l&apos;avoir et ceci pendant une période de 10 ans (à partir de la date d&apos;avoir)</description>
    <formula>NOT(ISBLANK(creditMemoReference__c)) &amp;&amp;
(
ISNULL(creditMemoDate__c) ||
NOT(ISNULL(creditMemoDate__c)) &amp;&amp; ADDMONTHS(creditMemoDate__c, 120) &gt; TODAY()
)</formula>
    <label>[#] Avoir verrouillé</label>
    <type>Checkbox</type>
</CustomField>