force-app/main/default/objects/CreditMemo__c/fields/isRefused__c.field-meta.xml
<CustomField>
    <fullName>isRefused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refusé</label>
    <type>Checkbox</type>
</CustomField>