force-app/main/default/objects/CreditMemo__c/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est validé ?</label>
    <type>Checkbox</type>
</CustomField>