force-app/main/default/objects/CreditMemo__c/fields/publishedChannel__c.field-meta.xml
<CustomField>
    <fullName>publishedChannel__c</fullName>
    <label>Canal de publication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En main propre chez le client</fullName>
            </value>
            <value>
                <fullName>En main propre sur l&apos;entité commerciale</fullName>
            </value>
            <value>
                <fullName>En main propre sur l&apos;entité service</fullName>
            </value>
            <value>
                <fullName>Par courrier</fullName>
            </value>
            <value>
                <fullName>Par email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>