force-app/main/default/objects/CreditMemo__c/fields/refundDate__c.field-meta.xml
<CustomField>
    <fullName>refundDate__c</fullName>
    <label>Date de remboursement</label>
    <type>Date</type>
</CustomField>