force-app/main/default/objects/CreditMemo__c/fields/seller__c.field-meta.xml
<CustomField>
    <fullName>seller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendeur</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Avoirs (Vendeur)</relationshipLabel>
    <relationshipName>SaleCreditMemos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>