force-app/main/default/objects/CreditMemo__c/fields/sellerCountry__c.field-meta.xml
<CustomField>
    <fullName>sellerCountry__c</fullName>
    <defaultValue>&apos;FRANCE&apos;</defaultValue>
    <label>Pays du vendeur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>