force-app/main/default/objects/CreditMemo__c/fields/sellerEmail__c.field-meta.xml
<CustomField>
    <fullName>sellerEmail__c</fullName>
    <label>Email du vendeur</label>
    <type>Email</type>
</CustomField>