force-app/main/default/objects/CreditMemo__c/fields/sellerPhone__c.field-meta.xml
<CustomField>
    <fullName>sellerPhone__c</fullName>
    <label>Téléphone du vendeur</label>
    <type>Phone</type>
</CustomField>