force-app/main/default/objects/CreditMemo__c/fields/shippingAdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>shippingAdditionalAddress__c</fullName>
    <label>Complément d&apos;adresse de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>