force-app/main/default/objects/CreditMemo__c/fields/shippingCity__c.field-meta.xml
<CustomField>
    <fullName>shippingCity__c</fullName>
    <label>Ville de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>