force-app/main/default/objects/CreditMemo__c/fields/shippingContact__c.field-meta.xml
<CustomField>
    <fullName>shippingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact de livraison</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avoirs (Contact de livraison)</relationshipLabel>
    <relationshipName>ShippingCreditMemos</relationshipName>
    <type>Lookup</type>
</CustomField>