force-app/main/default/objects/CreditMemo__c/fields/shippingName__c.field-meta.xml
<CustomField>
    <fullName>shippingName__c</fullName>
    <label>Nom de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>