force-app/main/default/objects/CreditMemo__c/fields/shippingStreet__c.field-meta.xml
<CustomField>
    <fullName>shippingStreet__c</fullName>
    <label>Rue de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>