force-app/main/default/objects/CreditMemo__c/fields/stageName__c.field-meta.xml
<CustomField>
    <fullName>stageName__c</fullName>
    <defaultValue>&apos;Préparation&apos;</defaultValue>
    <label>Etape</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditMemoStageName</valueSetName>
    </valueSet>
</CustomField>