force-app/main/default/objects/CreditMemo__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&apos;Brouillon&apos;</defaultValue>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Publié</fullName>
            </value>
            <value>
                <fullName>Acquitté</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>