force-app/main/default/objects/CreditMemo__c/fields/TMP_isInvoiceCancellationInvalid__c.field-meta.xml
<CustomField>
    <fullName>TMP_isInvoiceCancellationInvalid__c</fullName>
    <formula>!ISNULL(creditMemoDate__c) &amp;&amp;
!ISBLANK(invoice__c) &amp;&amp;
(ISNULL(invoice__r.cancellationDate__c) || invoice__r.cancellationDate__c == null) &amp;&amp;
amount__c &gt;= invoice__r.amount__c</formula>
    <label>[#] Annulation facture invalide?</label>
    <type>Checkbox</type>
</CustomField>