force-app/main/default/objects/CreditMemo__c/fields/VATAmount2__c.field-meta.xml
<CustomField>
    <fullName>VATAmount2__c</fullName>
    <label>Montant TVA (2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>