force-app/main/default/objects/CreditMemo__c/fields/VATAmount3__c.field-meta.xml
<CustomField>
    <fullName>VATAmount3__c</fullName>
    <label>Montant TVA (3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>