force-app/main/default/objects/CreditMemo__c/fields/VATRate1__c.field-meta.xml
<CustomField>
    <fullName>VATRate1__c</fullName>
    <label>Taux TVA (1)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>