force-app/main/default/objects/CreditMemo__c/fields/worksite__c.field-meta.xml
<CustomField>
    <fullName>worksite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chantier</label>
    <referenceTo>Chantier__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>CreditMemos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>