force-app/main/default/objects/CreditMemo__c/recordTypes/CommercialCreditMemo.recordType-meta.xml
<RecordType>
    <fullName>CommercialCreditMemo</fullName>
    <active>true</active>
    <label>Avoir commercial</label>
</RecordType>