force-app/main/default/objects/CreditMemo__c/recordTypes/InvoiceCreditMemo.recordType-meta.xml
<RecordType>
    <fullName>InvoiceCreditMemo</fullName>
    <active>true</active>
    <label>Avoir de facture</label>
</RecordType>