force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CancellatioChannelRequ.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CancellatioChannelRequ</fullName>
    <active>true</active>
    <description>Le motif d&apos;annulation est obligatoire si la date est saisie</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL( cancellationDate__c )) &amp;&amp;
ISBLANK(cancellationReason__c) &amp;&amp;
isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>cancellationReason__c</errorDisplayField>
    <errorMessage>Le motif d&apos;annulation est obligatoire si une date d&apos;annulation est saisie!</errorMessage>
</ValidationRule>