force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_Cancellation</fullName>
    <active>true</active>
    <description>Lors de la comptabilisation d&apos;un avoir (date d&apos;avoir ou référence renseignée), vérifier que le montant du nouvel avoir ajouté au débit de la commande est supérieur ou égal à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISNULL(cancellationDate__c) &amp;&amp;
ISPICKVAL(status__c, &apos;Annulé&apos;)</errorConditionFormula>
    <errorMessage>Date d&apos;annulation obligatoire!</errorMessage>
</ValidationRule>