force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CancellingDateRequiredC.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CancellingDateRequiredC</fullName>
    <active>true</active>
    <description>La date d&apos;annulation est obligatoire si un motif d&apos;annulation est saisi!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISNULL( cancellationDate__c ) &amp;&amp;
NOT(ISBLANK(cancellationReason__c)) &amp;&amp;
isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>cancellationDate__c</errorDisplayField>
    <errorMessage>La date d&apos;annulation est obligatoire si un motif d&apos;annulation est saisi!</errorMessage>
</ValidationRule>