force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CancellingDateValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CancellingDateValid</fullName>
    <active>true</active>
    <description>La date d&apos;annulation doit être inférieure à la date du jour!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c = false &amp;&amp;
NOT( ISNULL( cancellationDate__c ) ) &amp;&amp;
cancellationDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>cancellationDate__c</errorDisplayField>
    <errorMessage>La date d&apos;annulation doit être inférieure à la date du jour!</errorMessage>
</ValidationRule>