force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CredDateInvoiceDatValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CredDateInvoiceDatValid</fullName>
    <active>false</active>
    <description>La date de l&apos;avoir doit être supérieure ou égale à la date de la facture associée.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c = false &amp;&amp;
NOT( ISBLANK( creditMemoDate__c ) ) &amp;&amp;
NOT( ISBLANK( invoice__c ) ) &amp;&amp;
creditMemoDate__c &lt; invoice__r.invoiceDate__c</errorConditionFormula>
    <errorDisplayField>creditMemoDate__c</errorDisplayField>
    <errorMessage>La date de l&apos;avoir doit être supérieure ou égale à la date de la facture associée!</errorMessage>
</ValidationRule>