force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CreditMemoDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CreditMemoDate</fullName>
    <active>true</active>
    <description>La date de l&apos;avoir ne peut être antérieure à la date du jour ni à facture associée!
Remplace et annule les 3 VR:VR_K3_CreditMemo_CreditMemoDateValid, VR_K3_CreditMemo_DateAvoirAnterieurFactu et VR_K3_CreditMemo_CredDateInvoiceDatValid</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c = false &amp;&amp;
NOT(ISNULL(creditMemoDate__c)) &amp;&amp;
(ISNEW() || ISCHANGED(creditMemoDate__c)) &amp;&amp;
(NOT(ISNULL(PRIORVALUE(creditMemoDate__c))) || creditMemoDate__c &lt; TODAY() || creditMemoDate__c &lt; invoice__r.invoiceDate__c)</errorConditionFormula>
    <errorDisplayField>creditMemoDate__c</errorDisplayField>
    <errorMessage>Date de l&apos;avoir invalide (non modifiable, et doit être supérieure ou égale à la date du jour et de la date de la facture associée)!</errorMessage>
</ValidationRule>