force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_CreditMemoDateValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_CreditMemoDateValid</fullName>
    <active>false</active>
    <description>La date de l&apos;avoir ne peut être antérieure à la date du jour!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c = false &amp;&amp;
NOT( ISNULL( creditMemoDate__c ) ) &amp;&amp;
creditMemoDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>creditMemoDate__c</errorDisplayField>
    <errorMessage>La date de l&apos;avoir ne peut être antérieure à la date du jour!</errorMessage>
</ValidationRule>