force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_DateAvoirAnterieurFactu.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_DateAvoirAnterieurFactu</fullName>
    <active>false</active>
    <description>Interdire une date d&apos;avoir antérieure à la date de la facture (pour les avoirs référençant une facture).</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL( invoice__c )) &amp;&amp;
creditMemoDate__c &lt; invoice__r.invoiceDate__c</errorConditionFormula>
    <errorMessage>La date de l&apos;avoir ne peut pas être antérieure à la date de la facture associée.</errorMessage>
</ValidationRule>