force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_InvoiceRecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_InvoiceRecordType</fullName>
    <active>true</active>
    <description>Un avoir ne peut pas être lié à une facture d&apos;acompte</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
NOT(ISBLANK( invoice__c )) &amp;&amp;
invoice__r.RecordType.DeveloperName != &apos;Invoice&apos;</errorConditionFormula>
    <errorDisplayField>invoice__c</errorDisplayField>
    <errorMessage>Un avoir ne peut pas être lié à une facture d&apos;acompte!</errorMessage>
</ValidationRule>