force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_InvoiceRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_InvoiceRequired</fullName>
    <active>true</active>
    <description>Si avoir de facture, la facture est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK(invoice__c) &amp;&amp;
RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>invoice__c</errorDisplayField>
    <errorMessage>Vous devez renseigne une facture!</errorMessage>
</ValidationRule>