force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_LinesRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_LinesRequired</fullName>
    <active>true</active>
    <description>Un avoir de facture doit avoir au minimum une ligne</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
creditMemoLinesCount__c == 0 &amp;&amp;
NOT(ISPICKVAL(status__c, &quot;Brouillon&quot;)) &amp;&amp; 
RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
isLegacy__c == false</errorConditionFormula>
    <errorMessage>Un avoir de facture doit avoir au minimum une ligne!</errorMessage>
</ValidationRule>