force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_MontantFacturePlafond.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_MontantFacturePlafond</fullName>
    <active>true</active>
    <description>Lors de la création d&apos;un avoir référençant une facture, vérifier que le montant du nouvel avoir ajouté au montant déjà annulé de la facture ne dépasse pas le montant total de la facture</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp; 
NOT(ISNULL(invoice__c)) &amp;&amp; 
/*
(ISPICKVAL(status__c, &apos;Brouillon&apos;) || (NOT(ISNULL(creditMemoDate__c)) &amp;&amp; ISPICKVAL(PRIORVALUE(status__c), &apos;Brouillon&apos;))) &amp;&amp;
*/
ISNULL(PRIORVALUE(creditMemoDate__c)) &amp;&amp; 
((amount__c + invoice__r.cancelledAmount__c) &gt; invoice__r.amount__c)</errorConditionFormula>
    <errorMessage>Montant cumulé des avoirs supérieur au montant de la facture !</errorMessage>
</ValidationRule>