force-app/main/default/objects/CreditMemo__c/validationRules/VR_K3_CreditMemo_MontantSuperieurA0.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemo_MontantSuperieurA0</fullName>
    <active>true</active>
    <description>Lors de la comptabilisation d&apos;un avoir (date d&apos;avoir ou référence renseignée), vérifier que le montant du nouvel avoir ajouté au débit de la commande est supérieur ou égal à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL(customerOrder__c)) &amp;&amp;
ISNULL(PRIORVALUE(creditMemoDate__c)) &amp;&amp; 
((customerOrder__r.creditMemosAmount__c + amount__c) &gt; customerOrder__r.invoicesAmount__c)</errorConditionFormula>
    <errorMessage>Montant cumulé des avoirs supérieur au montant cumulé des factures de la commande!</errorMessage>
</ValidationRule>